# chess-control

./: pyproject.toml
chess-control/: asdf.py  controller.py  main.py  motor.py  reed.py
